Prevent text markers from overlapping markers
See https://www.woltlab.com/community/thread/300322-the-size-of-the-highlight-bbcode-needs-to-be-fixed/

--- a/wcfsetup/install/files/style/ui/ckeditor.scss
+++ b/wcfsetup/install/files/style/ui/ckeditor.scss
@@ -331,7 +331,7 @@ html[data-color-scheme="dark"] {
 	border-width: 1px 0;
 	-webkit-box-decoration-break: clone;
 	box-decoration-break: clone;
-	padding: 0.15em;
+	padding: 0 0.15em;
 }
 
 .marker-error {
